<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WinLife</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add_goal">Add new goal</string>
    <string name="overview">Overview</string>
    <string name="goal_name">Goal name</string>
    <string name="goal_points">Goal points</string>
    <string name="Is_subgoal_from">Is subgoal from</string>
    <string name="main_goal">main goal is:</string>
    <string name="choose_trophy_value">Choose Trophy Value</string>
    <string name="add_trophy">Add Trophy</string>
    <string name="trophy_title">Trophy Title</string>
    <string name="trophy_description">Trophy Description</string>
    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>
    <string name="trophy_finish_adding">Done adding trophies</string>
    <string name="trophy_value">Trophy Value</string>
    <string name="trophy_completed">Trophy Completed</string>
    <string name="total_points">Total Points:</string>
    <string name="level">Level:</string>
    <string name="profile">Profile</string>
    <string name="point_until_next_level">Point until next level:</string>
    <string name="trophy_type">Trophy Type</string>
    <string name="choose_trophy_type">Choose Throphy Type</string>

</resources>
