<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trophy_title"
            android:id="@+id/textView3"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTrophyTitle"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trophy_description"
            android:id="@+id/textView5"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/textView6"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTrophyDescription"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_trophy_type"
            android:id="@+id/textView4"/>
    <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <ImageButton
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:id="@+id/imgBronze" android:focusable="false" android:background="@drawable/trophy_bronze"
                android:layout_row="0" android:layout_column="0"/>
        <ImageButton
                android:layout_width="79dp"
                android:layout_height="79dp"
                android:id="@+id/imgSilver" android:background="@drawable/trophy_silver"/>
        <ImageButton
                android:layout_width="84dp"
                android:layout_height="84dp"
                android:id="@+id/imgGold" android:layout_row="0" android:layout_column="2"
                android:background="@drawable/trophy_gold"/>
    </GridLayout>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_trophy"
            android:id="@+id/button" android:layout_gravity="right"/>
</LinearLayout>